when quote field change , the shipment type also automatically changing while create booking , added logic for not overide the shipment type